--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -9,10 +9,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v3
     
     - name: Make
-    run: make
+      run: make
